# nccl-windows

./: .gitignore  CMakeLists.txt  Makefile  NcclConfig.cmake.in  README.md
src/: common_coll.h  common_kernel.h  copy_kernel.h  core.cu  core.h  nccl.h
test/include/: test_utilities.h
test/single/: all_reduce_test.cu  reduce_test.cu
windows/: nccl.vcxproj
windows/test/single/: all_gather_scan.vcxproj  all_gather_test.vcxproj  all_reduce_scan.vcxproj  all_reduce_test.vcxproj  broadcast_scan.vcxproj  broadcast_test.vcxproj  reduce_scan.vcxproj  reduce_scatter_scan.vcxproj  reduce_scatter_test.vcxproj  reduce_test.vcxproj
